bug fixed: close button not showing

--- a/src/css/_styles.css
+++ b/src/css/_styles.css
@@ -298,7 +298,7 @@ color: var(--white-black);
  position: fixed;
  top: 0px;
  right: 0px;
- width: 143px;
+ width: 144px;
 
 }
 #control-bar > .controls > button {
